--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+		<!--comment-->
           <a class="navbar-brand" href="/Resume">Website</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
