Added Salt Lake Temple photo to index.html

--- a/index.html
+++ b/index.html
@@ -33,8 +33,14 @@
     </nav>
 
     <div class="container main">
-
-
+			<div class="parallax">
+				<div class="parallax__layer parallax__layer--back">
+					<img src="photos/saltLake.jpg"/>
+				</div>
+				<div class="parallax__layer parallax__layer--base">
+					<h1>Salt Lake City Temple</h1>
+				</div>
+			</div>
 
     </div>
 
