--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 
     </div>
 
-		<footer class="footer">
+		<!--footer class="footer">
 			<div class="container">
 				<p>Created by Jay Davis &amp; Cole Lyman with help from <a href="http://getbootstrap.com/2.3.2/">Bootstrap</a>.</p>
 			</div>
-		</footer>
+		</footer-->
 
   </body>
 </html>
