Added groups, and Timp temple. Not happy with the current layout

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Pair Programming #1</title>
+		<title>Pair Programming #1- Utah Temples</title>
 	</head>
 	<body>
 		<nav class="navbar navbar-default navbar-fixed-top">
@@ -20,7 +20,7 @@
             <span class="icon-bar"></span>
           </button>
 		<!--comment-->
-          <a class="navbar-brand" href="/Resume">Website</a>
+          <a class="navbar-brand" href="/Resume">Utah Temples</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -34,11 +34,22 @@
 
     <div class="container main">
 			<div class="parallax">
-				<div class="parallax__layer parallax__layer--back">
-					<img src="photos/saltLake.jpg"/>
+				<div class="parallax__group" id="group1">
+					<div class="parallax__layer parallax__layer--back">
+						<img src="photos/saltLake.jpg"/>
+						<h1>Back</h1>
+					</div>
+					<div class="parallax__layer parallax__layer--base">
+						<h1>Salt Lake City Utah Temple</h1>
+					</div>
 				</div>
-				<div class="parallax__layer parallax__layer--base">
-					<h1>Salt Lake City Temple</h1>
+				<div class="parallax__group" id="group2">
+					<div class="parallax__layer parallax__layer--back">
+						<img src="photos/timp.jpg"/>
+					</div>
+					<div class="parallax_layer parallax__layer--base">
+						<h1>Mount Timpanogos Utah Temple</h1>
+					</div>
 				</div>
 			</div>
 
