Adding newest version

--- a/index.html
+++ b/index.html
@@ -1,54 +1,43 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-		<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+<!-- saved from url=(0041)https://students.cs.byu.edu/~jaysd/cs201/ -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<link type="text/css" rel="stylesheet" href="styles/bootstrap.min.css">
+		<link rel="stylesheet" href="styles/bootstrap-theme.min.css">
+		<link rel="stylesheet" href="styles/font-awesome.min.css">
+		<script src="scripts/jquery-latest.min.js" type="text/javascript"></script>
+		<link type="text/css" rel="stylesheet" href="styles/stylesheet.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Pair Programming #1</title>
 	</head>
 	<body>
-		<nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-		<!--comment-->
-          <a class="navbar-brand" href="/Resume">Website</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="/Resume">Home</a></li>
-            <li><a href="/Resume/photos">Content</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
 
-    <div class="container main">
-			<div class="parallax">
-				<div class="parallax__layer parallax__layer--back">
-					<img src="photos/saltLake.jpg"/>
-				</div>
-				<div class="parallax__layer parallax__layer--base">
-					<h1>Salt Lake City Temple</h1>
-				</div>
-			</div>
+<div id="title" class="slide header">
+  <h1>LDS Temples: Utah</h1>
+</div>
+<div id="payson" class="slide">
+  <div class="title">
+    <h1>Payson</h1>
+  </div>
+</div>
 
-    </div>
+<div id="thumbnails" class="slide">
+  <!--div class="title">
+    <h1>St. George & Bountiful</h1>
+  </div-->
+  <img src="images/st-george.png">
+  <img src="images/bountiful.png">
+</div>
 
-		<!--footer class="footer">
-			<div class="container">
-				<p>Created by Jay Davis &amp; Cole Lyman with help from <a href="http://getbootstrap.com/2.3.2/">Bootstrap</a>.</p>
-			</div>
-		</footer-->
+<div id="ogden" class="slide">
+  <div class="title">
+    <h1>Ogden</h1>
+  </div>
+</div>
 
-  </body>
-</html>
+<div id="saltlake" class="slide footer">
+    <h1>Salt Lake City</h1>
+</div>
+
+
+
+</body></html>
