--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
 		<script src="scripts/jquery-latest.min.js" type="text/javascript"></script>
 		<link type="text/css" rel="stylesheet" href="styles/stylesheet.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Pair Programming #1- Utah Temples</title>
+		<title>Pair Programming #1</title>
 	</head>
 	<body>
-<<<<<<< HEAD
 
 <div id="title" class="slide header">
   <h1>LDS Temples: Utah</h1>
@@ -20,50 +19,6 @@
     <h1>Payson</h1>
   </div>
 </div>
-=======
-		<nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-		<!--comment-->
-          <a class="navbar-brand" href="/Resume">Utah Temples</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="/Resume">Home</a></li>
-            <li><a href="/Resume/photos">Content</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
-    <div class="container main">
-			<div class="parallax">
-				<div class="parallax__group" id="group1">
-					<div class="parallax__layer parallax__layer--back">
-						<img src="photos/saltLake.jpg"/>
-						<h1>Back</h1>
-					</div>
-					<div class="parallax__layer parallax__layer--base">
-						<h1>Salt Lake City Utah Temple</h1>
-					</div>
-				</div>
-				<div class="parallax__group" id="group2">
-					<div class="parallax__layer parallax__layer--back">
-						<img src="photos/timp.jpg"/>
-					</div>
-					<div class="parallax_layer parallax__layer--base">
-						<h1>Mount Timpanogos Utah Temple</h1>
-					</div>
-				</div>
-			</div>
->>>>>>> 7912dde4de0b7cf0836b657af2bf6dbec6a9e84a
 
 <div id="thumbnails" class="slide">
   <!--div class="title">
