--- a/index.html
+++ b/index.html
@@ -7,17 +7,24 @@
 		<script src="scripts/jquery-latest.min.js" type="text/javascript"></script>
 		<link type="text/css" rel="stylesheet" href="styles/stylesheet.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Pair Programming #1</title>
+		<title>LDS Temples: Utah- Pair Programming #1</title>
 	</head>
 	<body>
 
 <div id="title" class="slide header">
   <h1>LDS Temples: Utah</h1>
 </div>
+
 <div id="payson" class="slide">
   <div class="title">
     <h1>Payson</h1>
   </div>
+</div>
+
+<div id="logan" class="slide">
+	<div class="title">
+		<h1>Logan</h1>
+	</div>
 </div>
 
 <div id="thumbnails" class="slide">
@@ -28,6 +35,12 @@
   <img src="images/bountiful.png">
 </div>
 
+<div id="timp" class="slide">
+	<div class="title">
+		<h1>Mt. Timpanogos</h1>
+	</div>
+</div>
+
 <div id="ogden" class="slide">
   <div class="title">
     <h1>Ogden</h1>
@@ -35,7 +48,9 @@
 </div>
 
 <div id="saltlake" class="slide footer">
+	<div class="title">
     <h1>Salt Lake City</h1>
+	</div>
 </div>
 
 
