--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
   </div>
 </div>
 
-<div id="logan" class="slide">
+<!--div id="logan" class="slide">
 	<div class="title">
 		<h1>Logan</h1>
 	</div>
-</div>
+</div-->
 
 <div id="thumbnails" class="slide">
   <!--div class="title">
@@ -35,11 +35,11 @@
   <img src="images/bountiful.png">
 </div>
 
-<div id="timp" class="slide">
+<!--div id="timp" class="slide">
 	<div class="title">
 		<h1>Mt. Timpanogos</h1>
 	</div>
-</div>
+</div-->
 
 <div id="ogden" class="slide">
   <div class="title">
